# EP2-mac0508

./: .gitignore  EP2.ipynb  MBart50.ipynb  README.md  descricao.md  descricao_detalhada.md  pyproject.toml  relatorio.md  relatorio_final.md
.ipynb_checkpoints/: EP2-checkpoint.ipynb
data/: test.csv  train.csv  val.csv
models/pt_to_ta/checkpoint-3105/: rng_state.pth  scaler.pt  trainer_state.json
models/pt_to_ta/checkpoint-3726/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/ta_to_pt/checkpoint-3105/: scaler.pt  scheduler.pt  trainer_state.json
models/ta_to_pt/checkpoint-3726/: adapter_config.json  scaler.pt  trainer_state.json
models/ta_to_pt_final/: tokenizer_config.json
processed_data/: train.csv  val.csv
results/: results_few_shot.json  results_zero_shot.json
results/outputs_few_shot/: pt_to_ta.csv  ta_to_pt.csv
results/outputs_zero_shot/: pt_to_ta.csv  ta_to_pt.csv
tradutor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
