[project]
name = "tradutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "peft>=0.18.0",
    "protobuf>=6.33.1",
    "sacrebleu>=2.5.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.2",
]
